# open-trading-api

./: .dockerignore  .gitignore  Dockerfile  KIS20260408  ai_trading_engine.py  database.py  kis_devlp.yaml  main.py  pyproject.toml  render.yaml  requirements.txt  risk_manager.py  telegram_trader.py  test_bal.py  test_gemini.py  trades.db
examples_user/: kis_auth.py
execution/: trading_engine.py
risk/: rules.py
strategy/: ai_evaluator.py  models.py  state_machine.py
trading_broker/: __init__.py
trading_broker/kis_api/: __init__.py  adapters.py  client.py
trading_data/: __init__.py  db.py  models.py
trading_execution/: __init__.py  trading_engine.py
trading_risk/: __init__.py  rules.py
trading_strategy/: __init__.py  state_machine.py  utils.py
web_dashboard/: index.html  package-lock.json  package.json
web_dashboard/src/: App.jsx  index.css
