[project]
name = "kis-github"
version = "18.0.0"
description = "korea investment open api sample codes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.1",
    "pycryptodome>=3.23.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "websockets>=15.0.1",
    "python-telegram-bot>=20.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "google-genai>=0.3.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
]
